--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,8 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-buy.html"></include>
-    <include src="./partials/contact-modal.html"></include>
+    <include src="./partials/contact-modal.html"></include> 
+    <include src="./partials/modal-about.html"></include>
     
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
@@ -50,7 +51,9 @@
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
 
-    <script src="./js/modal-buy.js"></script>
+    <script src="./js/modal-buy.js"></script> 
+
+    <script src="./js/modal-about.js"></script>
 
   </body>
 </html>
