Комментирует модалку Location

--- a/src/index.html
+++ b/src/index.html
@@ -41,17 +41,17 @@
     <include src="./partials/modal-about.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js" type="module"></script>
 
-    <script src="./js/contact-modal.js"></script>
+    <script src="./js/contact-modal.js" type="module"></script>
 
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" type="module"></script>
+    <script src="./script.js" type="module"></script>
 
-    <script src="./js/modal-buy.js"></script>
+    <script src="./js/modal-buy.js" type="module"></script>
 
-    <script src="./js/modal-about.js"></script>
+    <script src="./js/modal-about.js" type="module"></script>
   </body>
 </html>
