--- a/src/index.html
+++ b/src/index.html
@@ -43,15 +43,15 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
 
-    <script src="./js/modal.js"></script>
+    <script defer src="./js/modal.js"></script>
 
-    <script src="./js/contact-modal.js"></script>
+    <script defer src="./js/contact-modal.js"></script>
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
 
-    <script src="./js/modal-buy.js"></script>
+    <script defer src="./js/modal-buy.js"></script>
 
-    <script src="./js/modal-about.js"></script>
+    <script defer src="./js/modal-about.js"></script>
   </body>
 </html>
