close  modal for click in backdrop, add button up

--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="You can order ice-cream, ice coffee and milkshakes due to this site. 
+                                      There are only natural and eco ingredients in our products. Our delivery
+                                      works since 00:00 to 23:59 hours 7 days per week"
+    />
     <title>IceCream</title>
-    <link rel="shortcut icon" href="./images/Header/ice-cream/logo.png" type="image/x-icon" />
-    <link rel="icon" href="./images/Header/ice-cream/logo.png" type="image/x-icon" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="shortcut icon"
+      href="./images/Header/ice-cream/logo.png"
+      type="image/x-icon"
+      target="_blank"
+      rel="noreferrer noopener"
+    />
+    <link
+      rel="icon"
+      href="./images/Header/ice-cream/logo.png"
+      type="image/x-icon"
+      target="_blank"
+      rel="noreferrer noopener"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+      target="_blank"
+      rel="noreferrer noopener"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+      target="_blank"
+      rel="noreferrer noopener"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
+      target="_blank"
+      rel="noreferrer noopener"
     />
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+      target="_blank"
+      rel="noreferrer noopener"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
+      target="_blank"
+      rel="noreferrer noopener"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      target="_blank"
+      rel="noreferrer noopener"
     />
   </head>
   <body>
